# wholesale-management

./: .gitignore  README.md
server/: db.sqlite3  django_backend_design_v3.md  pyproject.toml
server/apps/accounts/: models.py  serializers.py  urls.py  utils.py  views.py
server/apps/accounts/migrations/: 0001_initial.py
server/apps/core/: models.py  pagination.py  public_views.py  serializers.py  urls.py  views.py
server/apps/core/migrations/: 0001_initial.py
server/apps/customers/: models.py  serializers.py  views.py
server/apps/customers/migrations/: 0001_initial.py
server/apps/dashboard/: views.py
server/apps/factories/: models.py  serializers.py  urls.py  views.py
server/apps/factories/migrations/: 0001_initial.py
server/apps/inventory/: models.py  urls.py  views.py
server/apps/inventory/migrations/: 0001_initial.py
server/apps/payments/: serializers.py  views.py
server/apps/payments/migrations/: 0001_initial.py
server/apps/products/: models.py
server/apps/purchases/: apps.py  models.py  public_documents.py  serializers.py  views.py
server/apps/purchases/helpers/: pdf_generator.py
server/apps/purchases/migrations/: 0001_initial.py
server/apps/purchases/services/: invoice_cache.py  invoices.py
server/apps/sales/: filters.py  models.py  serializers.py  views.py
server/cofig/: settings.py
server/config/: settings.py  urls.py
server/config/settings/: base.py  development.py  production.py
server/invoice/purchases/: generator.py  registry.py
server/invoice/sales/: generator.py  registry.py
server/utils/: exception_handler.py
(+96 files in other folders)
